remove white space between in the magazine section links. also fix margin issue on in the magazine section, second row

--- a/styles.css
+++ b/styles.css
@@ -380,6 +380,7 @@ h1 {
 	display: flex;
 	flex-direction: column;
 	width: 100%;
+	margin-left: 0;
 }
 
 .bottom-links__header {
